Updated day-01 solution

--- a/2022/day-01/day-1-solution.ipynb
+++ b/2022/day-01/day-1-solution.ipynb
@@ -4,67 +4,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day one: Calorie Counting"
+    "## --- Day 1: Calorie Counting ---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Import Data \n",
+    "\n",
+    "with open('day-1-input.txt', 'r') as f:\n",
+    "    data = f.read().split('\\n\\n')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The elf carrying the most calories is carrying 68802 calories\n",
-      "The 3 elfs carrying the most calories are carrying a combined total of 205370 calories\n"
+      "The elf carrying the most calories is carrying 68802 calories\n"
      ]
     }
    ],
    "source": [
-    "## Import Data \n",
-    "\n",
-    "with open('day-1-input.txt', 'r') as f:\n",
-    "    data = f.read().split('\\n\\n')\n",
-    "\n",
+    "## Task 1 : Find the Elf carrying the most calories. How many total Valories is that Elf carrying\n",
     "\n",
     "## Find the number of calories each elf is carrying and store as int\n",
     "for i in range(len(data)):\n",
     "    data[i] = ([int(j) for j in data[i].split()])\n",
     "\n",
-    "\n",
-    "## Task one: Find the elf carrying the most Calories. How many total calories is that elf carrying\n",
-    "\n",
+    "## Sum each Elf's calories\n",
     "sumCals = [sum(i) for i in data]\n",
     "\n",
-    "print(f\"The elf carrying the most calories is carrying {max(sumCals)} calories\")\n",
-    "\n",
-    "## Task two: Find the top three Elves carrying the most Calories. How many Calories are those Elves carrying in total?\n",
-    "\n",
-    "sortedSumCals = sorted(sumCals, reverse=True)\n",
-    "topThreeCals = sum(sortedSumCals[:3])\n",
-    "\n",
-    "print(f\"The 3 elfs carrying the most calories are carrying a combined total of {topThreeCals} calories\")\n",
-    "\n"
+    "print(f\"The elf carrying the most calories is carrying {max(sumCals)} calories\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "205370"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 3 elfs carrying the most calories are carrying a combined total of 205370 calories\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "## Task two: Find the top three Elves carrying the most Calories. How many Calories are those Elves carrying in total?\n",
+    "\n",
+    "## Sort the sum of each Elves calories\n",
+    "sortedSumCals = sorted(sumCals, reverse=True)\n",
+    "\n",
+    "## Sum the top 3\n",
+    "topThreeCals = sum(sortedSumCals[:3])\n",
+    "\n",
+    "print(f\"The 3 elfs carrying the most calories are carrying a combined total of {topThreeCals} calories\")"
+   ]
   }
  ],
  "metadata": {
