Updated day-7 solution

--- a/2022/day-07/day-7-solution.ipynb
+++ b/2022/day-07/day-7-solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,44 +11,92 @@
     "from collections import defaultdict\n",
     "\n",
     "with open('day-7-input.txt', 'r') as f:\n",
-    "    instructions = [i.strip() for i in f.readlines()][:-1]"
+    "    instructions = [i.strip() for i in f.readlines()][:-1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Construct the directory from the inputs\n",
-    "directory = defaultdict(int)\n",
+    "def createDirectory(instructions, defaultDict = True):\n",
+    "    \"\"\"\n",
+    "    Creates dictionary of directory paths and subtotals for sum of files size\n",
+    "    :type : instructions : List\n",
+    "    :type : defaultDict : Boolean\n",
+    "    :rtype : Dict or defaultdict(int)\n",
+    "    \"\"\"\n",
+    "    dirPath = []\n",
     "\n",
-    "dirPath = []\n",
+    "    ## Construct the directory as dictionary OR defaultdict(int)\n",
+    "    if defaultDict:\n",
+    "        directory = defaultdict(int)\n",
+    "    else:\n",
+    "        directory = {}\n",
     "\n",
-    "for instruction in instructions:\n",
-    "    ## If \"$ cd\" with no \"..\" command is changing directory to the directory provided after the cd command\n",
-    "    if \"$ cd\" == instruction[:4] and \"..\" not in instruction: \n",
-    "        ## directory name is the characters trailing the \"$ cd\" command\n",
-    "        dirName = instruction[5:]\n",
+    "    for instruction in instructions:\n",
+    "        ## If \"$ cd\" with no \"..\" command is changing directory to the directory provided after the cd command\n",
+    "        if \"$ cd\" == instruction[:4] and \"..\" not in instruction: \n",
+    "            ## directory name is the characters trailing the \"$ cd\" command\n",
+    "            dirName = instruction[5:]\n",
     "\n",
-    "        ## directory path is the previous directory path (set at nothing) with the new directory name appended\n",
-    "        joinedDir = \"\".join(dirPath) + dirName\n",
-    "        dirPath.append(joinedDir)\n",
+    "            ## directory path is the previous directory path (set at nothing) with the new directory name appended\n",
+    "            joinedDir = \"\".join(dirPath) + dirName\n",
+    "            dirPath.append(joinedDir)\n",
     "\n",
-    "    ## If \"$cd ..\" we are moving backwards one dirName in the dirPath and achieved with a pop\n",
-    "    elif \"$ cd ..\" == instruction[:7]:\n",
-    "        dirPath.pop()\n",
+    "        ## If \"$cd ..\" we are moving backwards one dirName in the dirPath and achieved with a pop\n",
+    "        elif \"$ cd ..\" == instruction[:7]:\n",
+    "            dirPath.pop()\n",
     "\n",
-    "    ## if command starts digit we plus equal the numeric value (size) of the command to the directory path key\n",
-    "    elif instruction[0].isdigit():\n",
-    "        for direct in dirPath:\n",
-    "            directory[direct] += int(instruction[:instruction.index(\" \")])\n",
-    "        "
+    "        ## if command starts digit we plus equal the numeric value (size) of the command to the directory path key\n",
+    "        elif instruction[0].isdigit():\n",
+    "            for direct in dirPath:\n",
+    "                ## If using defaultdict(int)\n",
+    "                if defaultDict:\n",
+    "                    directory[direct] += int(instruction[:instruction.index(\" \")])\n",
+    "\n",
+    "                ## If using standard dict\n",
+    "                else:\n",
+    "                    try:\n",
+    "                        directory[direct] += int(instruction[:instruction.index(\" \")])\n",
+    "                    except KeyError:\n",
+    "                        directory[direct] = int(instruction[:instruction.index(\" \")]) \n",
+    "\n",
+    "    return directory             \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Create Directory\n",
+    "defaultDirectory = createDirectory(instructions, \n",
+    "                                   defaultDict = True)\n",
+    "\n",
+    "directory = createDirectory(instructions, \n",
+    "                            defaultDict = False)\n",
+    "\n",
+    "defaultDirectory == directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -63,14 +111,14 @@
     "## Task 1 \n",
     "# Find all of the directories with a total size of at most 100000. What is the sum of the total sizes of those directories?\n",
     "\n",
-    "directorysSub100000 = [directory[i] for i in directory if directory[i] <= 100000]\n",
+    "directorysSub100000 = [directory[i] for i in directory if directory[i] <= 100_000]\n",
     "\n",
     "print(f\"The sum of the directories with a total size of at most 100000 is {sum(directorysSub100000)} \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +133,7 @@
     "## Task 2\n",
     "# Find the smallest directory that, if deleted, would free up enough space on the filesystem to run the update. What is the total size of that directory?\n",
     "rootPath = directory[\"/\"]\n",
-    "space = 30000000 - (70000000 - rootPath)\n",
+    "space = 30_000_000 - (70_000_000 - rootPath)\n",
     "\n",
     "directorysBigEnough = [directory[i] for i in directory if directory[i] >= space]\n",
     "\n",
