--- a/2022/day-08/day-8-solution.ipynb
+++ b/2022/day-08/day-8-solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,16 @@
     "    :type : treeHeight : int\n",
     "    :rtype : boolean\n",
     "    \"\"\"\n",
-    "    return all(i < treeHeight for i in up) or all(i < treeHeight for i in down) or all(i < treeHeight for i in left) or all(i < treeHeight for i in right)\n",
+    "    return (all(i < treeHeight for i in up) or\n",
+    "            all(i < treeHeight for i in down) or \n",
+    "            all(i < treeHeight for i in left) or \n",
+    "            all(i < treeHeight for i in right))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
