--- a/2022/day-07/day-7-solution.ipynb
+++ b/2022/day-07/day-7-solution.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# --- Day 7: No Space Left On Device ---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
