Updated day-10 solution

--- a/2022/day-10/day-10-solution.ipynb
+++ b/2022/day-10/day-10-solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "[['addx', '2'], ['addx', '4'], ['noop'], ['noop'], ['addx', '17'], ['noop']]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "13480"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -100,12 +100,14 @@
     "    print(\"$\" if abs(idx % 40 - val) <= 1 else \" \", end=\"\" if (idx + 1) % 40 else \"\\n\")\n",
     "\n",
     "\n",
-    "    ## If the absolute value of the (index mod 40) minus the cycle value AND (index + 1) mod 40, print char w/0 newline\n",
-    "    # if abs(idx % 40 - val) <= 1 and (idx + 1) % 40:\n",
-    "    #     print(\"$\", end = \"\" )\n",
-    "    ## Dont print symbol and start new line\n",
-    "    # else:\n",
-    "    #     print(\" \", end = \"\\n\")\n"
+    "# I dont understand why the above works and the below doesn't, seems like the same logic to me :man-shrugging: \n",
+    "# for idx, val in enumerate(values):\n",
+    "#     # If the absolute value of the (index mod 40) minus the cycle value AND (index + 1) mod 40, print char w/0 newline\n",
+    "#     if abs(idx % 40 - val) <= 1 and (idx + 1) % 40:\n",
+    "#         print(\"$\", end = \" \" )\n",
+    "#     # Dont print symbol and start new line\n",
+    "#     else:\n",
+    "#         print(\" \", end = \"\\n\")\n"
    ]
   }
  ],
