Updated minor things

--- a/2022/day-14/day-14-solution-part1.ipynb
+++ b/2022/day-14/day-14-solution-part1.ipynb
@@ -31,20 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "163"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Need to create a list of co-ordinates that have been filled with rocks.\n",
     "\n",
@@ -76,18 +65,25 @@
     "\n",
     "## We know sand comes from 500,0 but we need to know how deep it goes...\n",
     "\n",
+    "## First remove any duplicates\n",
     "filledSpaces = set(filledSpaces)\n",
+    "\n",
+    "## Pull out x and ys\n",
     "allY = [i[1] for i in filledSpaces]\n",
     "allX = [i[0] for i in filledSpaces]\n",
+    "\n",
+    "## depth is max of all ys\n",
     "depth = max(allY)\n",
+    "\n",
+    "## Need these for later on!\n",
     "sandCoords = []\n",
     "\n",
-    "depth"
+    "startingPosition = [500,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "828"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Run the simulation\n",
     "task1 = 0\n",
@@ -160,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
