Updated and Added day 12 solutions

--- a/2022/day-12/day-12-solution-part2.ipynb
+++ b/2022/day-12/day-12-solution-part2.ipynb
@@ -8,6 +8,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -79,6 +84,8 @@
     "##Taken from day-9\n",
     "direct = {\"D\": [1,0], \"U\":[-1,0], \"R\": [0,1], \"L\": [0,-1]}\n",
     "\n",
+    "\n",
+    "## Function is the same from part one but we now look from the other direction\n",
     "def getNeighbors(row,col):\n",
     "    global direct,height, width\n",
     "    validNeighbors = []\n",
@@ -93,7 +100,7 @@
     "            continue\n",
     "        else:\n",
     "            ## If the neighbor height is at most 1 above current step\n",
-    "            if convertToHeight(data[newRow][newCol]) <= convertToHeight(data[row][col]) + 1:\n",
+    "            if convertToHeight(data[newRow][newCol]) >= convertToHeight(data[row][col]) - 1: ## look one down instead of one up!\n",
     "                validNeighbors.append((newRow, newCol))\n",
     "        \n",
     "    return validNeighbors"
@@ -108,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "472\n"
+      "465\n"
      ]
     }
    ],
@@ -117,13 +124,16 @@
     "## Essentially maintains the order of the queue but 'gets' the highest priority item in the queue\n",
     "from queue import PriorityQueue\n",
     "\n",
-    "## Create a grid of possible locations based on height * width\n",
+    "## Create stop variable\n",
+    "a = ascii_lowercase.index(\"a\")\n",
     "\n",
+    "## Create a grid of possible locations based on height * width\n",
     "grid = [[\"o\"] * width for i in range(height)]\n",
     "\n",
     "queue = PriorityQueue()\n",
     "\n",
-    "queue.put((0, start[0], start[1]))\n",
+    "## Start at end, backtrack untill we get to any \"a\" location\n",
+    "queue.put((0, end[0], end[1])) \n",
     "\n",
     "while True:\n",
     "\n",
@@ -139,7 +149,8 @@
     "        grid[row][col] = \"x\"\n",
     "\n",
     "    ## Shortest amount of steps taken to achieve end\n",
-    "    if (row,col) == end: \n",
+    "    ## Instead of looking for end coordinates we look for any convertToHeight value for a grid location that is equal to a\n",
+    "    if convertToHeight(data[row][col]) == a:  \n",
     "        print(step)\n",
     "        break\n",
     "    \n",
